# ftxui_template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
cmake/: dependencies.txt
src/final_programm/: renderer.cpp
src/trial_n_error/: event_trys.cpp  event_trys_helper.h
